# JAF

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  falling_sand.cpp  main.cpp
include/: color.h  core.h  jaf.h  widgets.h
src/: core.cpp  jaf.cpp  widgets.cpp
